// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationTargetGroup renders a Target Group with tags 1`] = `
"{
  "resource": {
    "aws_alb_target_group": {
      "testTargetGroup_ecs_target_group_A0C76C7F": {
        "deregistration_delay": "120",
        "health_check": {
          "healthy_threshold": 5,
          "interval": 15,
          "path": "/",
          "protocol": "HTTP",
          "unhealthy_threshold": 3
        },
        "name_prefix": "A1BC",
        "port": 80,
        "protocol": "HTTP",
        "tags": {
          "hobby": "bowling",
          "name": "thedude"
        },
        "target_type": "ip",
        "vpc_id": "123"
      }
    }
  }
}"
`;

exports[`ApplicationTargetGroup renders a Target Group without tags 1`] = `
"{
  "resource": {
    "aws_alb_target_group": {
      "testTargetGroup_ecs_target_group_A0C76C7F": {
        "deregistration_delay": "120",
        "health_check": {
          "healthy_threshold": 5,
          "interval": 15,
          "path": "/",
          "protocol": "HTTP",
          "unhealthy_threshold": 3
        },
        "name_prefix": "ABC",
        "port": 80,
        "protocol": "HTTP",
        "target_type": "ip",
        "vpc_id": "123"
      }
    }
  }
}"
`;
